force-app/main/default/objects/ffr__fflib_BatchProcessDetail__c/ffr__fflib_BatchProcessDetail__c.object-meta.xml
<CustomObject>
    <label>FFR Batch Process Detail</label>
    <nameField>
        <displayFormat>BPD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FFR Batch Process Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>