force-app/main/default/objects/ffr__fflib_BatchProcessDetail__c/fields/ffr__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>ffr__BatchProcess__c</fullName>
    <label>Batch Process</label>
    <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Batch Process Details</relationshipLabel>
    <relationshipName>BatchProcessDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>