force-app/main/default/objects/ffr__fflib_BatchProcessDetail__c/fields/ffr__ChainNumber__c.field-meta.xml
<CustomField>
    <fullName>ffr__ChainNumber__c</fullName>
    <label>Chain Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>