force-app/main/default/objects/ffr__fflib_BatchProcessDetail__c/fields/ffr__StatusDetail__c.field-meta.xml
<CustomField>
    <fullName>ffr__StatusDetail__c</fullName>
    <label>Status Detail</label>
    <type>TextArea</type>
</CustomField>